# capstone-project-rag

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
chains/: rag_chains.py
data/: Combined_Nutrition_Data.xlsx  External_knowledge_Ingredient.csv  External_knowledge_NutritionInfo.csv  External_knowledge_Recipe.csv
ingestion/: README.md  extract_knowledge_data.py  transform_n_load_from_local.py  transform_n_load_to_pinecone.py
notebooks/: 01_Data-ingestion-for-rag-chatbot(without-embedding).ipynb  02_1_Pinecone_cohore_integration_connector_1.ipynb  02_2_Pinecone_cohore_integration_connector_2.ipynb  02_3_Pinecone_cohore_integration_connector_3.ipynb  Retrieval-QA-Pipeline-in-LangChain.ipynb
test/: README.md  test_extract_knowledge_data.py
